[tools] KUDU-3487 rebalancer checks the voter num.

Replace rebalance for the tables whose replication factor is 1 might
stuck for a long time because the rebalancer send LeaderStepDown request
even if there is no other voter to transfer leadership.

So check the voter num before sending the request.

Change-Id: I3b3d5dfb383719f56a2d32b62d2b659b17928794
Reviewed-on: http://gerrit.cloudera.org:8080/20264
Tested-by: Kudu Jenkins
Reviewed-by: Alexey Serbin <alexey@apache.org>